--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/darahvia/git-test.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "darahvia",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/darahvia/git-test/issues"
